force-app/main/default/objects/Stock_Adjustment__c/Stock_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Stock Adjustment</label>
    <pluralLabel>Stock Adjustments</pluralLabel>
    <nameField>
        <label>Adjustment Number</label>
        <displayFormat>ADJ-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stock reconciliation and adjustment records for warehouse inventory corrections</description>
</CustomObject>