force-app/main/default/objects/Stock_Adjustment__c/fields/Actual_Qty__c.field-meta.xml
<CustomField>
    <fullName>Actual_Qty__c</fullName>
    <label>Actual Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Physical count quantity for reconciliation</description>
</CustomField>