force-app/main/default/objects/Stock_Adjustment__c/fields/Adjusted_By__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_By__c</fullName>
    <label>Adjusted By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Adjustments Made</relationshipLabel>
    <relationshipName>Adjustments_Made</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>