force-app/main/default/objects/Stock_Adjustment__c/fields/Adjustment_Qty__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Qty__c</fullName>
    <label>Adjustment Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Positive to add stock, negative to deduct</description>
</CustomField>