force-app/main/default/objects/Stock_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Physical_Count</fullName><default>false</default><label>Physical Count</label></value>
            <value><fullName>Damage</fullName><default>false</default><label>Damage</label></value>
            <value><fullName>Expiry_Write_Off</fullName><default>false</default><label>Expiry Write Off</label></value>
            <value><fullName>Correction_Add</fullName><default>false</default><label>Correction Add</label></value>
            <value><fullName>Correction_Deduct</fullName><default>false</default><label>Correction Deduct</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>