force-app/main/default/objects/Stock_Adjustment__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Adjustments Approved</relationshipLabel>
    <relationshipName>Adjustments_Approved</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>