force-app/main/default/objects/Stock_Adjustment__c/fields/System_Qty__c.field-meta.xml
<CustomField>
    <fullName>System_Qty__c</fullName>
    <label>System Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>System stock quantity at the time of adjustment</description>
</CustomField>