force-app/main/default/objects/Stock_Adjustment__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Lookup</type>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Stock Adjustments</relationshipLabel>
    <relationshipName>Stock_Adjustments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>