force-app/main/default/objects/Stock_Adjustment__c/validationRules/Qty_Not_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_Not_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Adjustment_Qty__c = 0</errorConditionFormula>
    <errorMessage>Adjustment quantity cannot be zero.</errorMessage>
</ValidationRule>