force-app/main/default/objects/Stock_Adjustment__c/validationRules/Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Reason__c)</errorConditionFormula>
    <errorMessage>A reason is required for all stock adjustments.</errorMessage>
</ValidationRule>