force-app/main/default/objects/Stock_Adjustment__c/listViews/All_Adjustments.listView-meta.xml
<ListView>
    <fullName>All_Adjustments</fullName>
    <label>All Adjustments</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Warehouse__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>Adjustment_Qty__c</columns>
    <columns>Status__c</columns>
    <columns>Adjustment_Date__c</columns>
</ListView>