force-app/main/default/objects/Stock_Adjustment__c/listViews/Pending_Adjustments.listView-meta.xml
<ListView>
    <fullName>Pending_Adjustments</fullName>
    <label>Pending Adjustments</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <columns>NAME</columns>
    <columns>Warehouse__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>Adjustment_Qty__c</columns>
    <columns>Adjusted_By__c</columns>
</ListView>